gccida/g3/validate_change
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/validate_change/src/recog.c:671:1: error: unknown type name 'change_t_0'; did you mean 'change_t'?
change_t_0 *v11; // rdi 
^~~~~~~~~~
change_t
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/validate_change/src/recog.c:178:3: note: 'change_t' declared here
} change_t;
  ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/validate_change/src/recog.c:674:1: error: unknown type name 'change_t_0'; did you mean 'change_t'?
change_t_0 *v14; // rax 
^~~~~~~~~~
change_t
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/validate_change/src/recog.c:178:3: note: 'change_t' declared here
} change_t;
  ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/validate_change/src/recog.c:699:21: error: expected expression
v14 = ( change_t_0 *)xrealloc( v11, v13); 
                    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/validate_change/src/recog.c:699:9: error: use of undeclared identifier 'change_t_0'
v14 = ( change_t_0 *)xrealloc( v11, v13); 
        ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/validate_change/src/recog.c:705:4: error: member reference base type '__m128i' (vector of 2 'long long' values) is not a structure or union
v15->m128i_i64[0] = ( __int64)object; 
~~~^ ~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/validate_change/src/recog.c:706:30: error: invalid conversion between vector type '__m128i' (vector of 2 'long long' values) and integer type 'unsigned long long' of different size
v15[1] = _mm_unpacklo_epi64( ( __m128i)( unsigned __int64)loc, ( __m128i)( unsigned __int64)v4); 
                             ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/validate_change/src/recog.c:706:64: error: invalid conversion between vector type '__m128i' (vector of 2 'long long' values) and integer type 'unsigned long long' of different size
v15[1] = _mm_unpacklo_epi64( ( __m128i)( unsigned __int64)loc, ( __m128i)( unsigned __int64)v4); 
                                                               ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/validate_change/src/recog.c:711:4: error: member reference base type '__m128i' (vector of 2 'long long' values) is not a structure or union
v15->m128i_i32[2] = object[2].fld[0].rtint; 
~~~^ ~~~~~~~~~
8 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/validate_change/src/obj/recog.o] Error 1
